<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".room.RoomActivity">

    <Button
        android:id="@+id/read_csv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/read_csv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/date"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date"
        tools:ignore="MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/time"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_date"
        app:layout_constraintTop_toBottomOf="@+id/edit_date" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_time"
        app:layout_constraintTop_toBottomOf="@+id/edit_time"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/date_yyyy_mm_dd"
        app:layout_constraintEnd_toEndOf="@+id/edit_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_date"
        app:layout_constraintTop_toBottomOf="@+id/read_csv" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_hh_mm"
        app:layout_constraintBottom_toTopOf="@+id/edit_time"
        app:layout_constraintEnd_toEndOf="@+id/edit_time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_time"
        app:layout_constraintTop_toBottomOf="@+id/edit_date"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/edit_name"
        app:layout_constraintEnd_toEndOf="@+id/edit_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_time"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/add_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edit_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        app:layout_constraintVertical_bias="0.208" />
</androidx.constraintlayout.widget.ConstraintLayout>